tests/src/snapshots/pluma_tests__parse_success__def_two_part_empty_arg.snap
---
source: tests/src/parse_success.rs
expression: "def hello () world () {\n  a, b => \"wow!\"\n}"
---

=== Source ===
def hello () world () {
  a, b => "wow!"
}

=== Tokens ===
[
    KeywordDef(
        0,
        3,
    ),
    Identifier(
        4,
        9,
    ),
    LeftParen(
        10,
        11,
    ),
    RightParen(
        11,
        12,
    ),
    Identifier(
        13,
        18,
    ),
    LeftParen(
        19,
        20,
    ),
    RightParen(
        20,
        21,
    ),
    LeftBrace(
        22,
        23,
    ),
    LineBreak(
        23,
        24,
    ),
    Identifier(
        26,
        27,
    ),
    Comma(
        27,
        28,
    ),
    Identifier(
        29,
        30,
    ),
    DoubleArrow(
        31,
        33,
    ),
    StringLiteral(
        35,
        39,
    ),
    LineBreak(
        40,
        41,
    ),
    RightBrace(
        41,
        42,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        42,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                42,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        42,
                    ),
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                    typ: None,
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        12,
                                    ),
                                    kind: EmptyTuple,
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        13,
                                        18,
                                    ),
                                    name: "world",
                                    typ: None,
                                },
                                TypeExprNode {
                                    pos: (
                                        19,
                                        21,
                                    ),
                                    kind: EmptyTuple,
                                },
                            ),
                        ],
                    },
                    return_type: None,
                    generic_type_constraints: [],
                    params: [
                        IdentifierNode {
                            pos: (
                                26,
                                27,
                            ),
                            name: "a",
                            typ: None,
                        },
                        IdentifierNode {
                            pos: (
                                29,
                                30,
                            ),
                            name: "b",
                            typ: None,
                        },
                    ],
                    body: [
                        StatementNode {
                            pos: (
                                35,
                                39,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        35,
                                        39,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                35,
                                                39,
                                            ),
                                            kind: Str(
                                                "wow!",
                                            ),
                                            typ: None,
                                        },
                                    ),
                                    typ: None,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

