tests/src/snapshots/pluma_tests__parse_success__empty.snap
---
source: tests/src/parse_success.rs
expression: ""
---

=== Source ===


=== Tokens ===
[]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        0,
    ),
    body: [],
}

