tests/src/snapshots/pluma_tests__parse_success__identifier_not_ascii.snap
---
source: tests/src/parse_success.rs
expression: こんにちは
---

=== Source ===
こんにちは

=== Tokens ===
[
    Identifier(
        0,
        15,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        15,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                15,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        15,
                    ),
                    kind: Identifier(
                        IdentifierNode {
                            pos: (
                                0,
                                15,
                            ),
                            name: "こんにちは",
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

